--- a/devprojects/resources/css/index.css
+++ b/devprojects/resources/css/index.css
@@ -3,14 +3,32 @@
 }
 
 h1 {
-  color: SeaGreen;
+  font-family: Helvetica;
+  font-size: 100px;
+  font-weight: bold;
+  color: khaki;
+  text-align: center;
 }
-
-p,
-li {
-  font-size: 18px;
+h2 {
+  font-family: Helvetica;
+  font-size: 32px;
+  font-weight: bold;
+  color: white;
 }
-
-a {
-  text-decoration: none;
+h3 {
+  font-weight: bold;
+}
+span {
+  font-family: Helvetica;
+  font-weight: bold;
+  color: blue;
+}
+.brushes {
+  background-color: mediumspringgreen;
+}
+.frames {
+  background-color: lightcoral;
+}
+.paint {
+  background-color: skyblue;
 }
